# cpp-seminars

./: .gitignore  README.md  big-three-rule-cpp98.cpp  big-three-rule-wrong-way.cpp  compile-time-list-1.cpp  cpp11random.cpp  exception-and-destructor-2.cpp  files-1.cpp  files-2.cpp  files.cpp  iterator.cpp  miracle.cpp  non-copyable-cpp11.cpp  operators.cpp  regular_expressions.cpp  regular_expressions_2.cpp  shared-ptr.cpp  static.cpp  static_cast.cpp  string.cpp  templated-functions.cpp  templated-sort.cpp  templates-basic.cpp  testArray.cpp
big3-raii-destructors/: big-three-rule-cpp11.cpp  big-three-rule-move-semantics.cpp  exception-and-destructor-1.cpp  non-copyable-cpp98.cpp
containers/: enum.cpp  map.cpp  stl_adapters.cpp  stl_algorithms.cpp  vector-set-unordered_set.cpp
design_patterns/: Singleton.cpp  Visitor.cpp  crtp.cpp  double_dispatching_problem.cpp  double_dispatching_solution.cpp  other_patterns_notes.cpp  type_erasure.cpp  type_traits.cpp
design_patterns/factory_examples/: CMakeLists.txt
design_patterns/factory_examples/basic/: Derived1.cpp  Factory.cpp  Factory.hpp  main.cpp
design_patterns/factory_examples/with_map/: Derived1.hpp  Derived2.cpp  Derived2.hpp  Factory.cpp  Factory.hpp
design_patterns/factory_examples/with_static_map_initialization/: Base.hpp  Derived1.cpp  Derived1.hpp  Derived2.cpp  Derived2.hpp  Factory.cpp  Factory.hpp  main.cpp
exceptions/: exceptions-0.cpp  (+2 more)
projects-demo/: CMakeLists.txt  Makefile1  Makefile2  Makefile3  Makefile4
projects-demo/src/: main.cpp
projects-demo/src/libdemo/a/: A.cpp  A.hpp
projects-demo/src/libdemo/b/: B.cpp  B.hpp
projects-demo/src/libdemo/c/: c.hpp
(+88 files in other folders)
